app/k8s/live/proxyToAll/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: proxy-gateway
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-to-all-vs
spec:
  hosts:
  - "proxy.local"
  gateways:
  - apps-gateway
  http:
  - name: 'proxy'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: proxy-to-all
